# hcc-extractor

./: .env.example  .gitignore  Dockerfile  Dockerfile.langgraph  README.md  docker-compose.messaging.yml  docker-compose.yml  pyproject.toml
monitoring/: prometheus.yml
services/analyzer/: Dockerfile  README.md  langgraph.json  main.py  pyproject.toml
services/analyzer/analyzer/: message_consumer.py
services/analyzer/analyzer/db/: __init__.py  database_integration.py
services/analyzer/analyzer/db/models/: document.py
services/analyzer/analyzer/graph/: __init__.py  nodes.py  pipeline.py  state.py
services/analyzer/analyzer/llm/: client.py  decorators.py
services/analyzer/analyzer/models/: __init__.py  message.py
services/analyzer/analyzer/storage/: local.py
services/analyzer/app/: __init__.py  main.py
services/analyzer/app/graph/: nodes.py  pipeline.py  state.py
services/analyzer/app/llm/: prompts.py
services/analyzer/app/models/: condition.py  message.py
services/analyzer/app/storage/: __init__.py  local.py
services/analyzer/tests/: test_analyzer.py
services/api-gateway/: Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
services/api-gateway/app/: __init__.py  main.py
services/api-gateway/app/api/: __init__.py
services/api-gateway/app/api/v1/: router.py
services/api-gateway/app/api/v1/endpoints/: auth.py  batch.py  documents.py  hcc.py  webhooks.py
services/api-gateway/app/core/: config.py  dependencies.py  security.py
services/api-gateway/app/db/: base.py  session.py
services/api-gateway/app/db/models/: __init__.py  document.py  user.py  webhook.py
services/api-gateway/app/middleware/: __init__.py  logging.py  rate_limiting.py
services/api-gateway/app/schemas/: __init__.py  document.py  hcc.py  token.py  user.py  webhook.py
services/api-gateway/app/services/: document.py  hcc.py  message_broker.py  storage.py
services/api-gateway/app/utils/: logging.py  metrics.py  password.py
services/api-gateway/gateway/: __init__.py
services/api-gateway/gateway/api/v1/: __init__.py  router.py
services/api-gateway/gateway/api/v1/endpoints/: __init__.py  auth.py  batch.py  documents.py  hcc.py  webhooks.py
services/api-gateway/gateway/core/: __init__.py  config.py  dependencies.py  security.py
services/api-gateway/gateway/db/: session.py
services/api-gateway/gateway/db/models/: document.py  user.py  webhook.py
services/api-gateway/gateway/middleware/: logging.py  rate_limiting.py
services/api-gateway/gateway/models/: __init__.py  document.py
services/api-gateway/gateway/schemas/: document.py  hcc.py  token.py  user.py  webhook.py
services/api-gateway/gateway/services/: __init__.py  document.py  hcc.py  message_broker.py  storage.py
services/api-gateway/gateway/utils/: __init__.py  logging.py  metrics.py  password.py
services/api-gateway/migrations/: README.md  env.py
services/api-gateway/migrations/versions/: 001_initial.py
services/extractor/: Dockerfile  README.md  main.py  pyproject.toml
services/extractor/app/: __init__.py
services/extractor/app/extraction/: utils.py
services/extractor/app/extractor/: processor.py
services/extractor/app/graph/: nodes.py  pipeline.py
services/extractor/app/llm/: client.py
services/extractor/app/models/: document.py
services/extractor/app/storage/: cloud.py  local.py
services/extractor/app/utils/: document_parser.py
services/extractor/extractor/: message_consumer.py
services/extractor/extractor/core/: config.py
services/extractor/extractor/db/: base.py  session.py
services/extractor/extractor/db/models/: __init__.py  document.py
services/extractor/extractor/extraction/: utils.py
services/extractor/extractor/extractor/: processor.py
services/extractor/extractor/graph/: __init__.py  nodes.py  pipeline.py
services/extractor/extractor/llm/: __init__.py  client.py
services/extractor/extractor/models/: __init__.py  document.py
services/extractor/extractor/services/: extraction.py
services/extractor/extractor/storage/: __init__.py  cloud.py  local.py
services/extractor/extractor/utils/: __init__.py  document_parser.py  hcc_utils.py
services/extractor/tests/: test_extractor.py
services/storage-watcher/: Dockerfile  main.py  pyproject.toml
services/storage-watcher/app/: __init__.py  main.py
services/storage-watcher/app/core/: config.py
services/storage-watcher/app/db/: session.py
services/storage-watcher/app/db/models/: document.py  user.py  webhook.py
services/storage-watcher/app/publisher/: __init__.py  message_publisher.py
services/storage-watcher/app/watchers/: __init__.py  base_watcher.py  gcs_watcher.py  local_watcher.py  s3_watcher.py
services/validator/: Dockerfile  README.md  main.py  pyproject.toml
services/validator/app/: main.py
services/validator/app/models/: __init__.py  condition.py
services/validator/app/storage/: __init__.py  local.py
services/validator/app/validator/: __init__.py  hcc_validator.py  rules_engine.py
services/validator/tests/: test_validator.py
services/validator/validator/: __init__.py  message_consumer.py
services/validator/validator/data/: __init__.py  code_repository.py
services/validator/validator/db/: database_integration.py
services/validator/validator/db/models/: document.py
services/validator/validator/storage/: local.py
services/validator/validator/validator/: hcc_validator.py  rules_engine.py
traefik/: dynamic_conf.yml  traefik.yml
