[tool.poetry]
name = "hcc-api-gateway"
version = "0.1.0"
description = "API Gateway for HCC Extractor System"
authors = ["黒い龍 <ponchogcja@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
aio-pika = "^9.3.0"
structlog = "^23.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
asyncpg = "^0.28.0"
httpx = "^0.25.1"
prometheus-client = "^0.17.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.34.0"}
python-dotenv = "^1.0.0"
orjson = "^3.9.10"
opentelemetry-api = "1.20.0"
opentelemetry-semantic-conventions = "0.41b0"
opentelemetry-sdk = "1.20.0"
opentelemetry-instrumentation-fastapi = "0.41b0"
tenacity = "^8.2.3"
aiofiles = "^23.2.1"
boto3 = "^1.28.69"
google-cloud-storage = "^2.12.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
httpx = "^0.25.1"
pytest-mock = "^3.12.0"
faker = "^19.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"