[tool.poetry]
name = "hcc-storage-watcher-service"
version = "0.1.0"
description = "Storage watcher service for monitoring file changes and publishing events"
authors = ["黒い龍 <ponchogcja@gmail.com>"]
packages = [
    { include = "app" },
]

[tool.poetry.scripts]
dev = "main:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
python-dotenv = "^1.1.0"
structlog = "^23.2.0"
aio-pika = "^9.3.0"
boto3 = "^1.28.69"
google-cloud-storage = "^2.12.0"
watchfiles = "^0.21.0"
aiobotocore = "^2.8.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
alembic = "^1.15.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.2"
pyarrow = "19.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"