[tool.poetry]
name = "hcc-validator-service"
version = "0.1.0"
description = "Validation service for HCC conditions from clinical notes"
authors = ["黒い龍 <ponchogcja@gmail.com>"]
#packages = [{include = "gateway"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
google-cloud-storage = "^2.12.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pandas = "^2.1.3"
pyarrow = "^14.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]